# storage/api-docs/api-docs.json
@@ -1,12 +1,15 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "Swagger with Laravel",
+        "title": "Desafio Desenvolvedor Senior",
         "version": "1.0.0"
     },
     "paths": {
         "/api/auth": {
             "post": {
+                "tags": [
+                    "Auth"
+                ],
                 "summary": "Authenticate user and generate JWT token",
                 "operationId": "a8d85330b96bde8699cb2e66b5be211d",
                 "requestBody": {
@@ -52,6 +55,9 @@
         },
         "/api/auth/logout": {
             "delete": {
+                "tags": [
+                    "Auth"
+                ],
                 "summary": "Authenticate user and generate JWT token",
                 "operationId": "1ef69131b914976d7b0827b2b9d192df",
                 "responses": {
@@ -68,6 +74,9 @@
         },
         "/api/auth/user": {
             "get": {
+                "tags": [
+                    "Auth"
+                ],
                 "summary": "Get logged-in user details",
                 "operationId": "e23e5f9b32cba7953a224624a2a16544",
                 "responses": {
@@ -82,8 +91,27 @@
                 ]
             }
         },
+        "/api/health": {
+            "get": {
+                "tags": [
+                    "Health"
+                ],
+                "summary": "Verificar status de saúde",
+                "responses": {
+                    "200": {
+                        "description": "OK - A aplicação está saudável"
+                    },
+                    "500": {
+                        "description": "Erro - A aplicação está com problemas de saúde"
+                    }
+                }
+            }
+        },
         "/api/places": {
             "get": {
+                "tags": [
+                    "Places"
+                ],
                 "summary": "list places",
                 "operationId": "2fd1be89008cc6f268dded20a9f48b19",
                 "parameters": [
@@ -136,6 +164,9 @@
                 ]
             },
             "post": {
+                "tags": [
+                    "Places"
+                ],
                 "summary": "create places",
                 "operationId": "390f8d2f5570ae1fb410bc7062a0f70c",
                 "requestBody": {
@@ -193,6 +224,9 @@
         },
         "/api/primo": {
             "post": {
+                "tags": [
+                    "Primo"
+                ],
                 "summary": "Check if is Primo",
                 "operationId": "3bd618c1a2d27b4d3b245263d411bb68",
                 "requestBody": {
@@ -230,6 +264,9 @@
         },
         "/api/question": {
             "get": {
+                "tags": [
+                    "Questions"
+                ],
                 "summary": "show questions and responses",
                 "operationId": "e086646d47d6146c68ca34f54b33cd9f",
                 "responses": {
@@ -246,6 +283,9 @@
         },
         "/api/sort": {
             "post": {
+                "tags": [
+                    "Sort"
+                ],
                 "summary": "sort lists",
                 "operationId": "d11ac9f5a20d0a0abd370e38ccc14d0c",
                 "requestBody": {
